// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Separators should match snapshot 1`] = `
[
  <View
    accessibilityLabel="More options"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#E4E7EA",
        },
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
    underlayColor="black"
  >
    <Text
      style={
        [
          {
            "color": "#6C727A",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      More options
    </Text>
  </View>,
  <View
    importantForAccessibility="no"
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <Text
      accessible={false}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "marginHorizontal": 12,
            "textAlign": "left",
          },
          {
            "color": "#6C727A",
          },
        ]
      }
    >
      OR
    </Text>
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>,
  <View
    accessibilityLabel="Less options"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#E4E7EA",
        },
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
    underlayColor="black"
  >
    <Text
      style={
        [
          {
            "color": "#6C727A",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Less options
    </Text>
  </View>,
  <View
    importantForAccessibility="no"
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <Text
      accessible={false}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "marginHorizontal": 12,
            "textAlign": "left",
          },
          {
            "color": "#6C727A",
          },
        ]
      }
    >
      OR
    </Text>
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>,
]
`;

exports[`Story Snapshots: ServiceListCollapsed should match snapshot 1`] = `
[
  <View
    accessibilityLabel="Login on web"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#156FF5",
        },
        {},
        undefined,
      ]
    }
    underlayColor="black"
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Login on web
    </Text>
  </View>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Github"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Github
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Gitlab"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Gitlab
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Google"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Google
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
]
`;

exports[`Story Snapshots: ServiceListUncollapsed should match snapshot 1`] = `
[
  <View
    accessibilityLabel="Login on web"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    activeUnderlayOpacity={0.105}
    animationDuration={0}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#156FF5",
        },
        {},
        undefined,
      ]
    }
    underlayColor="black"
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Login on web
    </Text>
  </View>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Github"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Github
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Gitlab"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Gitlab
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Google"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Google
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#E4E7EA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessibilityLabel="Continue with Apple"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Apple
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
]
`;

exports[`Story Snapshots: ServicesList should match snapshot 1`] = `
[
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#F7F8FA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              github
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#F7F8FA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              gitlab
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#F7F8FA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              google
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      activeOpacity={0.5}
      activeUnderlayOpacity={1}
      animationDuration={0}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": 10,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#F7F8FA",
              "borderRadius": 4,
            },
          ],
          undefined,
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              apple
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </ExternalKeyboardView>,
]
`;
